BTF-6 Implement individual team email invitations
